--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   redis:
     image: redis:latest
     container_name: redis_crawl
+    hostname: redis_crawl
     restart: on-failure
     networks:
       - crawl
@@ -11,6 +12,22 @@ services:
       - "${REDIS_HOST_PORT}"
     volumes:
       - ${REDIS_LOG_DIR}:/var/log/redis/:rw
+  postgres:
+    image: crawl_psql
+    hostname: crawl_db
+    build:
+      context: ./postgres
+      dockerfile: Dockerfile
+    restart: on-failure
+    volumes:
+      - ./volumes/postgres/data:/var/lib/postgresql/data
+    networks:
+      - crawl
+    environment:
+      - POSTGRES_DB=${POSTGRES_DEFAULT_DB}
+      - POSTGRES_USER=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=${POSTGRES_DB_HOST}
 
 networks:
   crawl:
