updating env file with postgres variables

--- a/docker/sample.env
+++ b/docker/sample.env
@@ -1,2 +1,7 @@
 REDIS_HOST_PORT=6379
 REDIS_LOG_DIR=./log/redis
+
+POSTGRES_DEFAULT_DB=public
+POSTGRES_USERNAME=sample
+POSTGRES_PASSWORD=secret
+POSTGRES_DB_HOST=
