--- a/docker/sample.env
+++ b/docker/sample.env
@@ -4,4 +4,5 @@ REDIS_LOG_DIR=./log/redis
 POSTGRES_DEFAULT_DB=public
 POSTGRES_USERNAME=sample
 POSTGRES_PASSWORD=secret
-POSTGRES_DB_HOST=
+POSTGRES_DB_HOST=db.crawl
+POSTGRES_PORT=5432
