--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   redis:
     image: redis:latest
     container_name: redis_crawl
-    hostname: redis.crawl
+    hostname: ${REDIS_HOST}
     restart: on-failure
     networks:
       - crawl
     expose:
-      - ${REDIS_HOST_PORT}
+      - ${REDIS_PORT}
     volumes:
       - ${REDIS_LOG_DIR}:/var/log/redis/:rw
   postgres:
@@ -43,11 +43,23 @@ services:
       - 80:80
       - 443:443
     environment:
-      - POSTGRES_DB=${POSTGRES_DEFAULT_DB}
-      - POSTGRES_USER=${POSTGRES_USERNAME}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_HOST=${POSTGRES_DB_HOST}
+      - POSTGRES_DB=${POSTGRES_DEFAULT_DB}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_USERNAME=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY}
+      - AWS_REGION=${AWS_REGION}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - REDIS_HOST=${REDIS_HOST}
+      - REDIS_PORT=${REDIS_PORT}
+      - LOG_FOLDER=${PYTHON_LOG_FILEPATH}
+      - MAIL_HOST=${MAIL_HOST}
+      - MAIL_PORT=${MAIL_PORT}
+      - MAIL_FROM=${MAIL_FROM}
+      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      - MAIL_USERNAME=${MAIL_USERNAME}
     volumes:
       - ./log/scheduler:/var/www/data_crawler/log
     networks:
