--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -1,7 +1,7 @@
-FROM postgres:12.0
+FROM postgres
 
 RUN apt-get update && apt-get clean && apt-get install -y apt-utils nano
 
-COPY ./init.sql /docker-entrypoint-initdb.d/
+# COPY ./init.sql /docker-entrypoint-initdb.d/
 
 CMD ["postgres"]
