--- a/app/logging.conf
+++ b/app/logging.conf
@@ -1,30 +1,33 @@
 [loggers]
-keys=scheduler,worker
+keys=root,scheduler,worker
 
 [handlers]
 keys=consoleHandler,schedulerHandler,workerHandler
-#,emailHandler
 
 [formatters]
 keys=basic
-#,email
+
+[logger_root]
+level=DEBUG
+handlers=consoleHandler
 
 [logger_scheduler]
 level=DEBUG
+qualname=scheduler
 handlers=consoleHandler,schedulerHandler
-#,emailHandler
 propagate=0
 
 [logger_worker]
 level=DEBUG
+qualname=worker
 handlers=workerHandler
-#,emailHandler
 propagate=0
 
 [handler_consoleHandler]
 class=StreamHandler
 level=DEBUG
 formatter=basic
+args=(sys.stdout,)
 
 [handler_schedulerHandler]
 class=FileHandler
@@ -37,11 +40,6 @@ class=FileHandler
 level=DEBUG
 args=(os.getenv('LOG_FOLDER', '/mnt/crawl/log/') + 'worker/worker.log', 'a+')
 formatter=basic
-
-# [handler_emailHandler]
-# class=SMTPHandler
-# level=CRITICAL
-# args=
 
 [formatter_basic]
 format=[%(asctime)s %(levelname)s] %(message)s
