--- a/docker/postgres/Dockerfile
+++ b/docker/postgres/Dockerfile
@@ -2,6 +2,6 @@ FROM postgres
 
 RUN apt-get update && apt-get clean && apt-get install -y apt-utils nano
 
-# COPY ./init.sql /docker-entrypoint-initdb.d/
+COPY ./init.sql /docker-entrypoint-initdb.d/
 
 CMD ["postgres"]
